--- a/.ipynb
+++ b/.ipynb
@@ -32,8 +32,7 @@
     "# !pip install imblearn\n",
     "# !pip install lightgbm\n",
     "# !pip install ipykernel\n",
-    "# !pip install --upgrade nbformat\n",
-    "\n"
+    "# !pip install --upgrade nbformat"
    ]
   },
   {
@@ -154,8 +153,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(diabetes['readmitted'] .value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes['readmitted'] = diabetes['readmitted'].replace([0,1,2],[0,0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(diabetes['readmitted'] .value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y = diabetes['readmitted']\n",
-    "print(f'Percentage of patient had a readmission: % {round(y.value_counts(normalize=True)[1]*100,2)} --> ({y.value_counts()[1]} patient)\\nPercentage of patient did not have a readmission: % {round(y.value_counts(normalize=True)[0]*100,2)} --> ({y.value_counts()[0]} patient)')"
+    "print(f'Percentage of patient readmitted under 30 days: % {round(y.value_counts(normalize=True)[1]*100,2)} --> ({y.value_counts()[1]} patient)\\nPercentage of patient not readmitted within 30 days: % {round(y.value_counts(normalize=True)[0]*100,2)} --> ({y.value_counts()[0]} patient)')"
    ]
   },
   {
@@ -358,9 +384,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diabetes.drop(['encounter_id', 'patient_nbr', 'race', 'gender', 'age', 'weight', 'payer_code', 'medical_specialty', \n",
-    "               'max_glu_serum', 'A1Cresult', 'metformin', \n",
-    "               'insulin', 'change', 'diabetesMed'], axis = 1, inplace = True)"
+    "# Dropping the columns which are not required\n",
+    "diabetes.drop(['encounter_id', 'patient_nbr', 'race', 'gender', 'age', \n",
+    "           'payer_code', 'medical_specialty', 'num_lab_procedures', 'num_procedures', \n",
+    "           'num_medications', 'number_outpatient', 'number_emergency', 'number_inpatient', \n",
+    "           'number_diagnoses', 'metformin', 'change'], axis = 1, inplace = True)"
    ]
   },
   {
@@ -500,7 +528,7 @@
     "\n",
     "diabetes_df_balanced = pd.concat([df_train_pos, df_train_neg.sample(n = len(df_train_pos), random_state = 111)],axis = 0)\n",
     "\n",
-    "diabetes_df_balanced = stroke_df_balanced.sample(n = len(diabetes_df_balanced), random_state = 42).reset_index(drop = True)\n",
+    "diabetes_df_balanced = diabetes_df_balanced.sample(n = len(diabetes_df_balanced), random_state = 42).reset_index(drop = True)\n",
     "\n",
     "print('Train balanced prevalence(n = %d):%.3f'%(len(diabetes_df_balanced), \\\n",
     "                                                calc_prevalence(diabetes_df_balanced.readmitted.values)))"
@@ -629,23 +657,6 @@
     "\n",
     "lr_valid_auc, lr_valid_accuracy, lr_valid_recall, \\\n",
     "    lr_valid_precision, lr_valid_specificity = print_report(y_valid,y_valid_preds, 0.5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Explaining Results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython import display\n",
-    "display.Image(\"C:/Users/kaden/Desktop/HHA550_diabetes_Data/Explaining_Results.png\")"
    ]
   },
   {
