--- a/HHA 550 - Assignment #9.ipynb
+++ b/HHA 550 - Assignment #9.ipynb
@@ -11,6 +11,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Import Packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install seaborn\n",
+    "# !pip install missingno\n",
+    "# !pip install xgboost\n",
+    "# !pip install catboost\n",
+    "# !pip install regex\n",
+    "# !pip install sklearn\n",
+    "# !pip install pandas\n",
+    "# !pip install numpy\n",
+    "# !pip install imblearn\n",
+    "# !pip install lightgbm\n",
+    "# !pip install ipykernel\n",
+    "# !pip install --upgrade nbformat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np  \n",
+    "import matplotlib.pyplot as plt  \n",
+    "import seaborn as sns  \n",
+    "import csv \n",
+    "from lightgbm import LGBMClassifier\n",
+    "from sklearn.model_selection import train_test_split, cross_validate\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.pipeline import make_pipeline   \n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "import missingno as msno\n",
+    "import re \n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from catboost import CatBoostClassifier\n",
+    "import xgboost as xgb\n",
+    "from sklearn.metrics import roc_auc_score, accuracy_score, precision_score, recall_score, classification_report, make_scorer\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold,cross_val_score, RepeatedStratifiedKFold,StratifiedKFold\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.preprocessing import OneHotEncoder,StandardScaler,PowerTransformer\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import KNNImputer,SimpleImputer\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from imblearn.pipeline import make_pipeline\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, balanced_accuracy_score,\\\n",
+    "                            precision_score, recall_score, roc_auc_score,\\\n",
+    "                            plot_confusion_matrix, classification_report, plot_roc_curve, f1_score\n",
+    "import plotly \n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objs as go\n",
+    "import plotly.offline as py\n",
+    "from plotly.offline import iplot\n",
+    "from plotly.subplots import make_subplots\n",
+    "import plotly.figure_factory as ff\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis (EDA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start with Loading the CSV Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes = pd.read_csv('data/new_diabetic_data_cleaned.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Insights into our target variable"
    ]
   },
