--- a/HHA 550 Assignments/HHA 550 - Assignment #10.ipynb
+++ b/HHA 550 Assignments/HHA 550 - Assignment #10.ipynb
@@ -87,6 +87,7 @@
     "from sklearn.compose import make_column_transformer\n",
     "from imblearn.pipeline import make_pipeline\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.cluster import KMeans\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from imblearn.over_sampling import SMOTE\n",
