--- a/HHA 550 Assignments/HHA 550 - Assignment #9.ipynb
+++ b/HHA 550 Assignments/HHA 550 - Assignment #9.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +87,7 @@
     "from sklearn.compose import make_column_transformer\n",
     "from imblearn.pipeline import make_pipeline\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.cluster import KMeans\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from imblearn.over_sampling import SMOTE\n",
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +337,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -103093,7 +103094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -103145,7 +103146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -103356,7 +103357,7 @@
        "readmitted                             0         0.000000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103373,7 +103374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -103382,7 +103383,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103403,7 +103404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -103412,7 +103413,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103440,7 +103441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -103645,7 +103646,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103656,7 +103657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -103708,7 +103709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -104017,7 +104018,7 @@
        "[8 rows x 29 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104035,7 +104036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -104073,7 +104074,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104091,7 +104092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -104118,7 +104119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -105088,7 +105089,7 @@
        "[29 rows x 29 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105099,7 +105100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -105118,7 +105119,7 @@
        "Name: readmitted, dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105130,7 +105131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -105284,7 +105285,7 @@
        "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105301,7 +105302,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4
